# alpicool-c15-ble-control

./: .gitignore  Bluetooth Setup Check.command  LICENSE  README.md  Run Sleep Cooling.command  build-app.sh  control.sh  install-launchd.sh  launchd-status.sh  pyproject.toml  schedule.example.json  setup-check.sh  uninstall-launchd.sh
.github/ISSUE_TEMPLATE/: compatibility-report.yml
docs/: protocol-notes.md
scripts/: alpicool_ble.py  analyze_temperature_data.py
scripts/demo/: README.md  live_demo.py  record-live.sh  record-trace.sh  recorded_demo.py  render-demo.sh  render_assets.py  render_photo_assets.py
tests/: test_demo_assets.py  test_protocol.py
tests/fixtures/: demo-night.jsonl  recorded-ble-trace.json
